[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "accord.py"
version = "0.0.1"
authors = [
  { name="Eetu Asikainen", email="eetu.asikainen1204@gmail.com" },
]
description = "Testing library for the discord.py library"
readme = "README.md"
requires-python = ">=3.11"
keywords = [
    "testing",
    "discord",
    "discord.py"
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/EddieTheCubeHead/accord.py"
"Bug Tracker" = "https://github.com/EddieTheCubeHead/accord.py/issues"